# uci-chess-engine

./: CMakeLists.txt  blocking_queue.h  board_position.cpp  board_position.h  chess_utils.h  gui_chess_move.cpp  gui_chess_move.h  main.cpp  process_interaction.cpp  process_interaction.h  uci_interactive.cpp  uci_interactive.h  uci_response.cpp  uci_response.h  utils.h
engine/: bitboard.h  bitboard_utils.h  chess_move.cpp  chess_move.h  chess_move_generator.h  chess_utils.h  debug_tools.cpp  debug_tools.h  dynamic_evaluator.cpp  dynamic_evaluator.h  game_state.cpp  game_state.h  killer_table.cpp  killer_table.h  legal_move_mask.h  move_list.cpp  move_list.h  move_list_pool.cpp  move_list_pool.h  move_masks.h  static_evaluator.cpp  static_evaluator.h  transposition_table.cpp  transposition_table.h  uci_interface.cpp  uci_interface.h  uci_interface_main.cpp  zobrist_hash.cpp  zobrist_hash.h
engine/magic/: magic_generator.cpp  magic_generator.h  magic_numbers.h
test/: engine_test.cpp  perft_utils.cpp  perft_utils.h
